--- a/tasks/version_lock.yml
+++ b/tasks/version_lock.yml
@@ -6,24 +6,21 @@
   register: package_nvr
   changed_when: no
   tags:
-   - rabbitmq
+    - rabbitmq
 
-# Inspired by https://github.com/elastic/ansible-elasticsearch/blob/master/tasks/elasticsearch-RedHat-version-lock.yml
 - name: Check if {{ package }} is version locked
-  shell: "yum versionlock list | grep -c {{ package_nvr.stdout | replace('(none)', '0') }}"
+  command: yum versionlock list
   args:
     warn: no
-  changed_when: false
-  # This is needed so the task doesn't fail when it's not locked
-  failed_when: false
-  register: version_lock_result
+  changed_when: no
+  register: versionlock_list_result
   tags:
-   - rabbitmq
+    - rabbitmq
 
 - name: Lock {{ package }}
-  shell: "yum versionlock delete {{ package }}* ; yum versionlock add {{ package_nvr.stdout | replace('(none)', '0') }}"
+  command: "yum versionlock add {{ package_nvr.stdout | replace('(none)', '0') }}"
   args:
     warn: no
-  when: version_lock_result and version_lock_result.stdout|int == 0
+  when: (package_nvr.stdout | replace('(none)', '0')) not in versionlock_list_result.stdout
   tags:
-   - rabbitmq
+    - rabbitmq
